[gd_scene load_steps=33 format=2]

[ext_resource path="res://sprites/act3settings/scene4/greySnow.PNG" type="Texture" id=1]
[ext_resource path="res://sprites/act 2 setting/scene 4/road2.png" type="Texture" id=2]
[ext_resource path="res://sprites/Act1settings/sceneone/back tree.png" type="Texture" id=3]
[ext_resource path="res://sprites/Act1settings/sceneone/middle tree.png" type="Texture" id=4]
[ext_resource path="res://sprites/act3settings/scene4/snow1.PNG" type="Texture" id=5]
[ext_resource path="res://sprites/act3settings/scene4/snow2.PNG" type="Texture" id=6]
[ext_resource path="res://Act1/player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://player.gd" type="Script" id=8]
[ext_resource path="res://act3/scene4/pothole.gd" type="Script" id=9]
[ext_resource path="res://sprites/act 2 setting/scene1/lamp2.png" type="Texture" id=10]
[ext_resource path="res://sprites/act 2 setting/scene1/lamp1.png" type="Texture" id=11]
[ext_resource path="res://sprites/act 2 setting/scene1/lamp3.png" type="Texture" id=12]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=13]
[ext_resource path="res://sprites/act 2 setting/scene 4/sewer.png" type="Texture" id=14]
[ext_resource path="res://sprites/act 2 setting/scene 4/sewer2.png" type="Texture" id=15]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow.PNG" type="Texture" id=16]
[ext_resource path="res://sprites/UI/GirlTextbox/arrow1.PNG" type="Texture" id=17]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://act3/scene4/surfacedialoguebox.gd" type="Script" id=19]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=20]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=21]

[sub_resource type="Animation" id=1]
resource_name = "snow2"
length = 50.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4605.79, -0.25, 0, 0.25, 0, 4605.79, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 30 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -3066.96, -0.25, 0, 0.25, 0, 5000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 49.8 )
}

[sub_resource type="Animation" id=2]
length = 30.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4111.29, -0.25, 0, 0.25, 0, 4111.29, -0.25, 0, 0.25, 0, 4111.29, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5, 10 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1181.55, -0.25, 0, 0.25, 0, 3000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 30 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4931.7, 263.821 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 439.199, 1116.94 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 203.229, 2714.28 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 330.28, 708.515 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 18 )

[sub_resource type="Animation" id=11]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1824.88, -0.25, 0, 0.25, 0, 1824.88, -0.25, 0, 0.25, 0, 1824.88, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 193.587, -0.25, 0, 0.25, 0, 275, -0.25, 0, 0.25, 0, 193.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Node2D" type="Node2D"]

[node name="player" parent="." instance=ExtResource( 7 )]
position = Vector2( 462.864, 1624.56 )
script = ExtResource( 8 )

[node name="frontSnow" type="ParallaxBackground" parent="."]
layer = -99

[node name="ParallaxLayer" type="ParallaxLayer" parent="frontSnow"]

[node name="Sprite" type="Sprite" parent="frontSnow/ParallaxLayer"]
position = Vector2( 4605.79, -3066.96 )
scale = Vector2( 2.26245, 2.65021 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="frontSnow/ParallaxLayer/Sprite"]
autoplay = "snow2"
anims/snow2 = SubResource( 1 )

[node name="sky" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="sky"]

[node name="Sprite" type="Sprite" parent="sky/ParallaxLayer"]
position = Vector2( 4062.62, 1106.07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="backtree" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="backtree"]

[node name="Sprite" type="Sprite" parent="backtree/ParallaxLayer"]
position = Vector2( 3820.33, 1032.33 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="backtree/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 3827.36, 1095.54 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="backtree/ParallaxLayer"]
position = Vector2( 4111.29, -1181.55 )
scale = Vector2( 1.99494, 1.65427 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="backtree/ParallaxLayer/Sprite3"]
autoplay = "snow"
anims/snow = SubResource( 2 )

[node name="road" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="road"]

[node name="Sprite" type="Sprite" parent="road/ParallaxLayer"]
position = Vector2( 3813.31, 1123.63 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4728.47, 2205.41 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7959.44, 971.107 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -36.3032, 9.07568 )
shape = SubResource( 5 )

[node name="pothole" type="Area2D" parent="."]
position = Vector2( 7.98926, -11.9834 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="pothole"]
position = Vector2( 4936.9, 1144.69 )
frames = SubResource( 6 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="pothole"]
position = Vector2( 5127.79, 1452.12 )
shape = SubResource( 7 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="pothole"]
position = Vector2( 5153.35, 969.826 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
frame = 1
playing = true
flip_v = true

[node name="lamp" type="AnimatedSprite" parent="."]
position = Vector2( 6829.6, 1042.93 )
z_index = -1
frames = SubResource( 9 )
frame = 10
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4344.28, 1045.85 )
z_index = -1
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 9616.08, 1047.41 )
z_index = -1
texture = ExtResource( 12 )

[node name="dialoguebox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox"]
margin_left = 622.502
margin_top = 221.152
margin_right = 3056.5
margin_bottom = 721.152
texture = ExtResource( 13 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox"]
margin_left = 761.618
margin_top = 303.0
margin_right = 2906.62
margin_bottom = 671.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="dialoguebox"]

[node name="continuesprite" type="Sprite" parent="dialoguebox"]
position = Vector2( 1824.88, 275 )
scale = Vector2( 1.64357, 1.98084 )
texture = ExtResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 11 )

[node name="Type" type="AudioStreamPlayer" parent="dialoguebox"]
stream = ExtResource( 20 )
[connection signal="body_entered" from="pothole" to="pothole" method="_on_pothole_body_entered"]
[connection signal="body_exited" from="pothole" to="pothole" method="_on_pothole_body_exited"]
[connection signal="tween_completed" from="dialoguebox/Tween" to="dialoguebox" method="_on_Tween_tween_completed"]
